# rex

./: Cargo.toml  default.nix
src/: main.rs
testdata/: config.toml  laptop_simple.txt
