[package]
name = "rex"
version = "0.1.0"
authors = ["Romanos Skiadas <rski@arista.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "0.5.6" }
serde = { version = "1.0", features = ["derive"] }
xdg = "^2.1"
